correct vertial align ux logo

--- a/css/main.css
+++ b/css/main.css
@@ -53,10 +53,17 @@ i {
 #start {
     background-color: #5FD9FF;
     min-height: 100%;
+    width: 100%;
+    display: table;
+}
+
+#cell {
+    display: table-cell; 
+    vertical-align:middle;
 }
 
 #middle {
-    padding-top: 200px;
+    /*padding-top: 200px;*/
 }
 
 #main {
